// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test with delete button 1`] = `
<div>
  <div
    class="tr__form-buttons-container tr__form-selected-object-buttons-container"
  >
    <div
      class="center"
    >
      <button
        class="button blue large"
        name="back"
        title="main:Back"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left _icon-alone"
          data-icon="arrow-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 105.4-105.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="undo"
        title="main:Undo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-left _icon-alone"
          data-icon="rotate-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M24 192l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-46.7-46.7c75.3-58.6 184.3-53.3 253.5 15.9 75 75 75 196.5 0 271.5s-196.5 75-271.5 0c-10.2-10.2-19-21.3-26.4-33-9.5-14.9-29.3-19.3-44.2-9.8s-19.3 29.3-9.8 44.2C49.7 408.7 61.4 423.5 75 437 175 537 337 537 437 437S537 175 437 75C342.8-19.3 193.3-24.7 92.7 58.8L41 7C34.1 .2 23.8-1.9 14.8 1.8S0 14.3 0 24L0 168c0 13.3 10.7 24 24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="redo"
        title="main:Redo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-right _icon-alone"
          data-icon="rotate-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M488 192l-144 0c-9.7 0-18.5-5.8-22.2-14.8s-1.7-19.3 5.2-26.2l46.7-46.7c-75.3-58.6-184.3-53.3-253.5 15.9-75 75-75 196.5 0 271.5s196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c94.3-94.3 243.7-99.6 344.3-16.2L471 7c6.9-6.9 17.2-8.9 26.2-5.2S512 14.3 512 24l0 144c0 13.3-10.7 24-24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button green large"
        name="save"
        title="main:Save"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check _icon-alone"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button red large"
        name="delete"
        title="main:Delete"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash-can _icon-alone"
          data-icon="trash-can"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
  </div>
</div>
`;

exports[`Test with save button 1`] = `
<div>
  <div
    class="tr__form-buttons-container tr__form-selected-object-buttons-container"
  >
    <div
      class="center"
    >
      <button
        class="button blue large"
        name="back"
        title="main:Back"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left _icon-alone"
          data-icon="arrow-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 105.4-105.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="undo"
        title="main:Undo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-left _icon-alone"
          data-icon="rotate-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M24 192l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-46.7-46.7c75.3-58.6 184.3-53.3 253.5 15.9 75 75 75 196.5 0 271.5s-196.5 75-271.5 0c-10.2-10.2-19-21.3-26.4-33-9.5-14.9-29.3-19.3-44.2-9.8s-19.3 29.3-9.8 44.2C49.7 408.7 61.4 423.5 75 437 175 537 337 537 437 437S537 175 437 75C342.8-19.3 193.3-24.7 92.7 58.8L41 7C34.1 .2 23.8-1.9 14.8 1.8S0 14.3 0 24L0 168c0 13.3 10.7 24 24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="redo"
        title="main:Redo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-right _icon-alone"
          data-icon="rotate-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M488 192l-144 0c-9.7 0-18.5-5.8-22.2-14.8s-1.7-19.3 5.2-26.2l46.7-46.7c-75.3-58.6-184.3-53.3-253.5 15.9-75 75-75 196.5 0 271.5s196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c94.3-94.3 243.7-99.6 344.3-16.2L471 7c6.9-6.9 17.2-8.9 26.2-5.2S512 14.3 512 24l0 144c0 13.3-10.7 24-24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button green large"
        name="save"
        title="main:Save"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check _icon-alone"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button red large"
        name="delete"
        title="main:Delete"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash-can _icon-alone"
          data-icon="trash-can"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
  </div>
</div>
`;

exports[`Test without delete button 1`] = `
<div>
  <div
    class="tr__form-buttons-container tr__form-selected-object-buttons-container"
  >
    <div
      class="center"
    >
      <button
        class="button blue large"
        name="back"
        title="main:Back"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left _icon-alone"
          data-icon="arrow-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 105.4-105.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="undo"
        title="main:Undo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-left _icon-alone"
          data-icon="rotate-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M24 192l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-46.7-46.7c75.3-58.6 184.3-53.3 253.5 15.9 75 75 75 196.5 0 271.5s-196.5 75-271.5 0c-10.2-10.2-19-21.3-26.4-33-9.5-14.9-29.3-19.3-44.2-9.8s-19.3 29.3-9.8 44.2C49.7 408.7 61.4 423.5 75 437 175 537 337 537 437 437S537 175 437 75C342.8-19.3 193.3-24.7 92.7 58.8L41 7C34.1 .2 23.8-1.9 14.8 1.8S0 14.3 0 24L0 168c0 13.3 10.7 24 24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="redo"
        title="main:Redo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-right _icon-alone"
          data-icon="rotate-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M488 192l-144 0c-9.7 0-18.5-5.8-22.2-14.8s-1.7-19.3 5.2-26.2l46.7-46.7c-75.3-58.6-184.3-53.3-253.5 15.9-75 75-75 196.5 0 271.5s196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c94.3-94.3 243.7-99.6 344.3-16.2L471 7c6.9-6.9 17.2-8.9 26.2-5.2S512 14.3 512 24l0 144c0 13.3-10.7 24-24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button green large"
        name="save"
        title="main:Save"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check _icon-alone"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
  </div>
</div>
`;

exports[`Test without save button 1`] = `
<div>
  <div
    class="tr__form-buttons-container tr__form-selected-object-buttons-container"
  >
    <div
      class="center"
    >
      <button
        class="button blue large"
        name="back"
        title="main:Back"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left _icon-alone"
          data-icon="arrow-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 105.4-105.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="undo"
        title="main:Undo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-left _icon-alone"
          data-icon="rotate-left"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M24 192l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-46.7-46.7c75.3-58.6 184.3-53.3 253.5 15.9 75 75 75 196.5 0 271.5s-196.5 75-271.5 0c-10.2-10.2-19-21.3-26.4-33-9.5-14.9-29.3-19.3-44.2-9.8s-19.3 29.3-9.8 44.2C49.7 408.7 61.4 423.5 75 437 175 537 337 537 437 437S537 175 437 75C342.8-19.3 193.3-24.7 92.7 58.8L41 7C34.1 .2 23.8-1.9 14.8 1.8S0 14.3 0 24L0 168c0 13.3 10.7 24 24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button grey large disabled"
        disabled=""
        name="redo"
        title="main:Redo"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-rotate-right _icon-alone"
          data-icon="rotate-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M488 192l-144 0c-9.7 0-18.5-5.8-22.2-14.8s-1.7-19.3 5.2-26.2l46.7-46.7c-75.3-58.6-184.3-53.3-253.5 15.9-75 75-75 196.5 0 271.5s196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c94.3-94.3 243.7-99.6 344.3-16.2L471 7c6.9-6.9 17.2-8.9 26.2-5.2S512 14.3 512 24l0 144c0 13.3-10.7 24-24 24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
    <div
      class="center"
    >
      <button
        class="button red large"
        name="delete"
        title="main:Delete"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash-can _icon-alone"
          data-icon="trash-can"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
            fill="currentColor"
          />
        </svg>
         
      </button>
    </div>
  </div>
</div>
`;
